updated BLOG page with correct images and aligned content

--- a/main.css
+++ b/main.css
@@ -286,30 +286,49 @@ nav {
   font-family: "Permanent Marker", cursive;
   color: white;
   font-size: 100px;
-  margin-left: 10%;
-  top: 0;
+  margin-left: 40%;
+  margin-top: -20%;
 }
-#blog body article {
+#blog body section {
+  margin-top: 25%;
+}
+#blog body section article {
   margin-top: 10%;
+  margin-bottom: 20%;
 }
-#blog body article h3 {
+#blog body section article h3 {
   color: white;
-  margin-left: 40%;
+  margin-left: 45%;
 }
-#blog body article p {
+#blog body section article p {
   color: white;
-  margin-left: 40%;
+  margin-left: 45%;
   width: 40%;
 }
-#blog body article div {
+#blog body section article div {
   position: absolute;
-  margin: 5%;
+  margin-left: 5%;
+  margin-top: -20%;
   left: 0;
   display: inline-block;
   width: 400px;
   height: 300px;
-  background: url(https://bit.ly/2mjL8l1) no-repeat center;
-  background-size: cover;
+  background-size: initial;
+}
+#blog body section article #blog1 {
+  background: url(/images/blog1.jpg) no-repeat center;
+}
+#blog body section article #blog2 {
+  background: url(/images/blog2.jpg) no-repeat center;
+}
+#blog body section article #blog3 {
+  background: url(/images/blog3.jpg) no-repeat center;
+}
+#blog body section article #blog4 {
+  background: url(/images/blbog4.gif) no-repeat center;
+}
+#blog body section article #blog5 {
+  background: url(/images/blog5.jpg) no-repeat center;
 }
 
 /*# sourceMappingURL=main.css.map */
